--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
 <head>
 	{{ HEAD }}
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"
 </head>
 <body {{ BODY_ATTRS }}>
 	{{ APP }}
